<resources>
    <string name="app_name">MuseuOnline</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="title_activity_main">MuseuOnline</string>
    <string name="title_activity_form_especie">Formulário da Especie</string>
    <string name="lbl_NomeEspecie">Nome Especie</string>
    <string name="lbl_nomeComun">Nome Comum</string>
    <string name="lbl_next">Proximo</string>
    <string name="lbl_habitat">Habitat</string>
    <string name="lbl_genero">Genero</string>
    <string name="lbl_coordenadas">Coordenadas</string>
    <string name="lbl_notas">Notas</string>
    <string name="lbl_codigo">Codigo</string>
    <string name="lbl_validacao">Validação</string>
    <string name="title_menu_ok">Ok</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="title_menu_main_login">Login</string>
    <string name="msg_sucess_conectionDB">conexao criada com sucesso</string>
    <string name="title_aviso">Mensagem de Aviso!</string>
    <string name="msg_ok">Ok</string>
    <string name="lbl_detalhes">Detalhes</string>
    <string name="title_activity_identificacao">Identificacao</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_identificao">Identificação</string>
    <string name="lbl_localizacao">Localização</string>
    <string name="lbl_provincia">Provincia</string>
    <string name="lbl_distrito">Distrito</string>
    <string name="lbl_preservacao">Preservação e Ameaças</string>
    <string name="lbl_metodoPreservacao">Metodo de Preservação</string>
    <string name="lbl_ameacas">Ameaças</string>
    <string name="lbl_identificacao">Identificação</string>
    <string name="lbl_identificador">Encontrado Por</string>
    <string name="lbl_identificador2">Identificado Por</string>
    <string name="title_activity_multimidia">Multimidia</string>
    <string name="lbl_image">Imagem</string>
    <string name="lbl_som">Som</string>
    <string name="lbl_video">Videp</string>
    <string name="action_proximo">Próximo</string>
    <string name="action_salvar">Salvar</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="lbl_nomeCompleto">Nome Completo</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_password">Palavra-Passe</string>
    <string name="lbl_confirmarPassword" >Confirmar Palavra-Passe</string>
    <string name="btn_registar_user">Registar</string>
    <string name="btn_login">Entrar</string>
    <string name="edittext_emailLogin">email</string>
    <string name="hintPalavraPasse">Palavra-Passe</string>
    <string name="radioRememberme">Lembrar me</string>
    <string name="txtCriar_conta">criar conta</string>
    <string name="txtesqueceupalavrapasse">Esqueceu a sua palavra-passe?</string>
    <string name="lbl_regiao">Região</string>
</resources>
