<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    android:background="@color/colorAccent"
    tools:showIn="@layout/activity_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#ffffff"
                android:text="@string/lbl_nomeCompleto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/baseline_person_white_18"
                app:layout_constraintEnd_toEndOf="@+id/txtNomeCompleto"
                app:layout_constraintStart_toStartOf="@+id/txtNomeCompleto"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeCompleto" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#ffffff"
                android:text="@string/lbl_email"
                app:layout_constraintEnd_toEndOf="@+id/editTextNomeCompleto"
                app:layout_constraintStart_toStartOf="@+id/editTextNomeCompleto"
                app:layout_constraintTop_toBottomOf="@+id/editTextNomeCompleto" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/txtEmail"
                app:layout_constraintStart_toStartOf="@+id/txtEmail"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />


            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#ffffff"
                android:text="@string/lbl_password"
                app:layout_constraintEnd_toEndOf="@+id/txtEmail"
                app:layout_constraintStart_toStartOf="@+id/txtEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_lock_white_18"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/txtPassword"
                app:layout_constraintStart_toStartOf="@+id/txtPassword"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

            <TextView
                android:id="@+id/txtConfirmarPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#ffffff"
                android:text="@string/lbl_confirmarPassword"
                app:layout_constraintEnd_toEndOf="@+id/txtPassword"
                app:layout_constraintStart_toStartOf="@+id/txtPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <EditText
                android:id="@+id/editTextConfirmarPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_lock_white_18"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/txtConfirmarPassword"
                app:layout_constraintStart_toStartOf="@+id/txtConfirmarPassword"
                app:layout_constraintTop_toBottomOf="@+id/txtConfirmarPassword" />

            <Button
                android:id="@+id/buttonRegistarUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary"
                android:text="@string/btn_registar_user"
                app:layout_constraintEnd_toEndOf="@+id/editTextConfirmarPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextConfirmarPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextConfirmarPassword" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>